--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -33,8 +33,8 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:postgresql://localhost:5432/bapondc
-    username: bapondc
-    password:
+    username: postgres
+    password: 1234567890
     hikari:
       poolName: Hikari
       auto-commit: false
@@ -42,7 +42,7 @@ spring:
     database-platform: tech.jhipster.domain.util.FixedPostgreSQL10Dialect
   liquibase:
     # Remove 'faker' if you do not want the sample data to be loaded automatically
-    contexts: dev, faker
+    contexts: dev,
   mail:
     host: localhost
     port: 25
@@ -68,7 +68,7 @@ spring:
         enabled: true
 
 server:
-  port: 8080
+  port: 8082
 
 # ===================================================================
 # JHipster specific properties
